@@ -22,10 +22,12 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.BiConsumer;
@@ -41,6 +43,7 @@ import org.springframework.cloud.bootstrap.config.PropertySourceLocator;
 import org.springframework.core.env.CompositePropertySource;
 import org.springframework.core.env.ConfigurableEnvironment;
 import org.springframework.core.env.Environment;
+import org.springframework.core.env.MapPropertySource;
 import org.springframework.core.env.PropertySource;
 
 /**
@@ -86,8 +89,17 @@ public abstract class SecretsPropertySourceLocator implements PropertySourceLoca
 			putPathConfig(composite);
 
 			if (this.properties.enableApi()) {
-				uniqueSources
-					.forEach(s -> composite.addPropertySource(getSecretsPropertySourceForSingleSecret(env, s)));
+				uniqueSources.forEach(s -> {
+					MapPropertySource propertySource = getSecretsPropertySourceForSingleSecret(env, s);
+
+					if ("true".equals(propertySource.getProperty(Constants.ERROR_PROPERTY))) {
+						LOG.warn("Failed to load source: " + s);
+					}
+					else {
+						LOG.debug("Adding secret property source " + propertySource.getName());
+						composite.addFirstPropertySource(propertySource);
+					}
+				});
 			}
 
 			cache.discardAll();
@@ -112,12 +124,16 @@ public abstract class SecretsPropertySourceLocator implements PropertySourceLoca
 
 	protected void putPathConfig(CompositePropertySource composite) {
 
-		if (!properties.paths().isEmpty()) {
+		Set<String> uniquePaths = new LinkedHashSet<>(properties.paths());
+
+		if (!uniquePaths.isEmpty()) {
 			LOG.warn(
 					"path support is deprecated and will be removed in a future release. Please use spring.config.import");
 		}
 
-		this.properties.paths().stream().map(Paths::get).filter(Files::exists).flatMap(x -> {
+		LOG.debug("paths property sources : " + uniquePaths);
+
+		uniquePaths.stream().map(Paths::get).filter(Files::exists).flatMap(x -> {
 			try {
 				return Files.walk(x);
 			}
@@ -177,8 +193,8 @@ public abstract class SecretsPropertySourceLocator implements PropertySourceLoca
 
 			try {
 				String content = new String(Files.readAllBytes(filePath)).trim();
-				String sourceName = fileName.toLowerCase();
-				SourceData sourceData = new SourceData(sourceName, Collections.singletonMap(fileName, content));
+				String sourceName = fileName.toLowerCase(Locale.ROOT);
+				SourceData sourceData = new SourceData(sourceName, Map.of(fileName, content));
 				return new SecretsPropertySource(sourceData);
 			}
 			catch (IOException e) {
